syntax = "proto3";

option java_multiple_files = true;
option java_package = "ai.wanaku.core.exchange.v1";
option java_outer_classname = "ProvisionExchange";

package ai.wanaku.provision.v1;

// The provisioner service definition.
service Provisioner {
  // Provisions configuration and secrets
  rpc Provision (ProvisionRequest) returns (ProvisionReply) {}
}

/**
 * Defines the type of payload (i.e.: if it's a reference to a configuration, or the configuration
 * itself, etc
 */
enum PayloadType {
  /**
   * Unspecified payload type.
   */
  PAYLOAD_TYPE_UNSPECIFIED = 0;

  /**
   * A reference to an external configuration or secret.
   */
  PAYLOAD_TYPE_REFERENCE = 1;

  /**
   * A built-in configuration or secret payload.
   */
  PAYLOAD_TYPE_BUILTIN = 2;
}

// Represents a configuration reference
message Configuration {
  PayloadType type = 1;
  string name = 2;
  string payload = 3;
}

// Represents a configuration reference
message Secret {
  PayloadType type = 1;
  string name = 2;
  string payload = 3;
}

// The provision request message
message ProvisionRequest {
  string uri = 1;
  Configuration configuration = 2;
  Secret secret = 3;
}

message PropertySchema {
  string type = 1;
  string description = 2;
  bool required = 3;
}

// The provision response message
message ProvisionReply {
  string configuration_uri = 1;
  string secret_uri = 2;
  map<string, PropertySchema> properties = 3;
}
